[package]
name = "mizl_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
mizl_pm = { path = "../mizl_pm" }
libc = "0.2.170"
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
flate2 = "1.0.28"
smallvec = "2.0.0-alpha.6"
mimalloc = "0.1.43"
seq-macro = "0.3.5"
roxmltree = "0.20.0"
crossbeam = "0.8.4"
bitflags = "2.9.0"
arc-swap = "1.7.1"
cfg-if = "1.0.0"
strum = "0.27.2"
strum_macros = "0.27.2"

[profile.release-with-debug]
inherits = "release"
debug = true
lto = "fat"
codegen-units = 1
